name:                hspaint
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ksadov/hspaint#readme
license:             BSD3
license-file:        LICENSE
author:              K Sadov
maintainer:          ksadov@gmail.com
copyright:           K Sadov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hspaint
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -threaded -fno-liberate-case -funfolding-use-threshold1000
   -funfolding-keeness-factor1000 -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , gloss-raster >= 1.13.1.1
    , gloss
    , repa
    , JuicyPixels
